tests/samples/valid/unicode_string_in_utf8_file.pn
fn main()
{
    print!("$10/£10/€10. Aÿ!!! 하와!!!");
}
