tests/samples/invalid/octal_literal.pn
fn main()
{
	var x = 0777;
}
